trunk/Archive2/54/87aec75563d820/output
main.cpp: In function 'int main()':
main.cpp:4:18: error: invalid conversion from 'int' to 'int*' [-fpermissive]
    int  *i_ptr = 5;
                  ^
