trunk/Archive2/54/87aec75563d820/main.cpp
#include <stdio.h>

int main(){
   int  *i_ptr = 5;
   printf("%d", *i_ptr); 
   return 0;
}